[gd_scene load_steps=31 format=3 uid="uid://42t4a2whpa6b"]

[ext_resource type="Script" uid="uid://cquptkk57sux4" path="res://Scenes/Enemies/Skeleton1/skeleton_1.gd" id="1_i0gc5"]
[ext_resource type="Texture2D" uid="uid://dalp4o1wb04qv" path="res://Assets/Sprites/Enemies/Skeleton1/Skeleton Idle.png" id="1_orbpe"]
[ext_resource type="Texture2D" uid="uid://c7ajtp57pcc1t" path="res://Assets/Sprites/Enemies/Skeleton1/Skeleton Walk.png" id="2_i0gc5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hwvp3"]
atlas = ExtResource("1_orbpe")
region = Rect2(0, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_afv7b"]
atlas = ExtResource("1_orbpe")
region = Rect2(24, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7r2dd"]
atlas = ExtResource("1_orbpe")
region = Rect2(48, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k2mw1"]
atlas = ExtResource("1_orbpe")
region = Rect2(72, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tjl6l"]
atlas = ExtResource("1_orbpe")
region = Rect2(96, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3628d"]
atlas = ExtResource("1_orbpe")
region = Rect2(120, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_irw6p"]
atlas = ExtResource("1_orbpe")
region = Rect2(144, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_31phq"]
atlas = ExtResource("1_orbpe")
region = Rect2(168, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7hll7"]
atlas = ExtResource("1_orbpe")
region = Rect2(192, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fayjm"]
atlas = ExtResource("1_orbpe")
region = Rect2(216, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nojx8"]
atlas = ExtResource("1_orbpe")
region = Rect2(240, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vvknj"]
atlas = ExtResource("2_i0gc5")
region = Rect2(0, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_ad63i"]
atlas = ExtResource("2_i0gc5")
region = Rect2(22, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_pmbdk"]
atlas = ExtResource("2_i0gc5")
region = Rect2(44, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_ksf1i"]
atlas = ExtResource("2_i0gc5")
region = Rect2(66, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_vif5h"]
atlas = ExtResource("2_i0gc5")
region = Rect2(88, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_i7ma5"]
atlas = ExtResource("2_i0gc5")
region = Rect2(110, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_t8afp"]
atlas = ExtResource("2_i0gc5")
region = Rect2(132, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_1fgkh"]
atlas = ExtResource("2_i0gc5")
region = Rect2(154, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_hd8f4"]
atlas = ExtResource("2_i0gc5")
region = Rect2(176, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_hnn05"]
atlas = ExtResource("2_i0gc5")
region = Rect2(198, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_wxmgb"]
atlas = ExtResource("2_i0gc5")
region = Rect2(220, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_k1rx4"]
atlas = ExtResource("2_i0gc5")
region = Rect2(242, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_yltcr"]
atlas = ExtResource("2_i0gc5")
region = Rect2(264, 0, 22, 33)

[sub_resource type="SpriteFrames" id="SpriteFrames_vvknj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hwvp3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_afv7b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7r2dd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k2mw1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tjl6l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3628d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_irw6p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_31phq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7hll7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fayjm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nojx8")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vvknj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ad63i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pmbdk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ksf1i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vif5h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i7ma5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t8afp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1fgkh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hd8f4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hnn05")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wxmgb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k1rx4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yltcr")
}],
"loop": true,
"name": &"walk",
"speed": 15.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_orbpe"]
radius = 6.0
height = 26.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i0gc5"]
size = Vector2(150, 27)

[node name="CharacterBody2D" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 24
script = ExtResource("1_i0gc5")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_vvknj")
animation = &"walk"
autoplay = "idle"
frame = 2
frame_progress = 0.24623522

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-3, 4)
shape = SubResource("CapsuleShape2D_orbpe")

[node name="View" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="View"]
position = Vector2(75, 0)
shape = SubResource("RectangleShape2D_i0gc5")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="body_entered" from="View" to="." method="_on_view_body_entered"]
[connection signal="body_exited" from="View" to="." method="_on_view_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
